src/test/deca/context/valid/assign-compatible.deca
class A{
}

{
    Object o = new A();
}
