src/test/deca/context/invalid/methodCall-methodInexistant.deca
class A{
    void method(){}
}

{
    A a;
    a.coucou();
}
